--- a/Fysio WebApplication/Views/Auth/RegisterPatient.cshtml
+++ b/Fysio WebApplication/Views/Auth/RegisterPatient.cshtml
@@ -6,7 +6,7 @@
 <h1>@ViewData["Title"]</h1>
 
 
-<form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+<form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post" enctype="multipart/form-data">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="row">
         <div class="col-md-6">
@@ -55,15 +55,15 @@
                 <input asp-for="@Model.SurName" class="form-control" autocomplete="family-name" aria-required="true" />
                 <span asp-validation-for="@Model.SurName" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                    <label asp-for="@Model.ImgData" class="control-label"></label>
-                    <input type="file" id="file1"
-                           name="file1"
-                           multiple="multiple"
-                           class="form-control"
-                           accept="image/*" />
-                    <span asp-validation-for="@Model.ImgData" class="text-danger"></span>
-                </div>
+                <div class="form-group">
+                <label asp-for="ImgData" class="control-label"></label>
+                <input type="file" id="file1"
+                       name="file1"
+                       multiple="multiple"
+                       class="form-control" 
+                       accept="image/*" />
+                <span asp-validation-for="ImgData" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="@Model.DateOfBirth"></label>
                 <input asp-for="@Model.DateOfBirth" class="form-control" aria-required="true" />
