--- a/Fysio WebApplication/Views/MedicalFile/Details.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/Details.cshtml
@@ -91,8 +91,12 @@
             Appointment
         </dt>
         <dd class="col-sm-10">
-            @Html.ActionLink("Details", "Appointment", new { id = Model.Id })
-            <!-- TODO: If there is more treatment things left for the week. Just make a new appointment. -->
+            @if (User.HasClaim("UserType", "Employee") || User.HasClaim("UserType", "Student"))
+            {
+                @Html.ActionLink("Details", "Appointment", new { id = Model.Id })
+            }else{
+                @Html.ActionLink("Afspraak maken", "Create", "Appointment")
+            }
         </dd>
     </dl>
 </div>
