--- a/Fysio WebApplication/Views/Shared/_LoginPartial.cshtml
+++ b/Fysio WebApplication/Views/Shared/_LoginPartial.cshtml
@@ -10,18 +10,18 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a  class="nav-link" href="/Account/Index" title="Manage">Hey @User.Identity.Name!</a>
+            <a id="identityName" class="nav-link" href="/Account/Index" title="Manage">Hey @User.Identity.Name!</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="/auth/logout">Log Out</a>
+        <a id="logut" class="nav-link" href="/auth/logout">Log Out</a>
     </li>
 }
 else{
     <li class="nav-item">
-        <a class="dropdown-item" href="/Auth/RegisterPatient">Register Patient</a>
+            <a id="registerPatient"  class="dropdown-item" href="/Auth/RegisterPatient">Register Patient</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="/Auth/Login">Login</a>
+        <a id="login" class="nav-link" href="/Auth/Login">Login</a>
     </li>
 }
 </ul>
