--- a/Fysio WebApplication/Views/Shared/_LoginPartial.cshtml
+++ b/Fysio WebApplication/Views/Shared/_LoginPartial.cshtml
@@ -4,11 +4,15 @@
 @inject UserManager<ApplicationUser> UserManager
 
 <ul class="navbar-nav">
-<!--<li class="nav-item">
+<li class="nav-item">
         <a href="/" class="darkmodeButton" id="darkmodeButton">🌓</a>
-</li>-->
+</li>
+<li>
+        <p>koenk</p>
+</li>
 @if (SignInManager.IsSignedIn(User))
 {
+    
     <li class="nav-item">
             <a id="identityName" class="nav-link" href="/Account/Index" title="Manage">Hey @User.Identity.Name!</a>
     </li>
